# livingdiscussionagent

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  main.py  pyproject.toml  quality_scorer.py  reddit-first-modular-recommendation-agent-for-prompthunt.md  replied_posts.json  reply_generator.py  rl-style-reddit-agent-mvp-rebuild.md  semantic_filter.py  thread_monitor.py
apps/dashboard/: package.json  tsconfig.tsbuildinfo
chrome_profile/: Last Browser  Local State
chrome_profile/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  index
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/ShaderCache/: data_1  index
chrome_profile/segmentation_platform/: ukm_db
config/rules/: lifecycle.yaml  products.yaml  subreddit_profiles.yaml
legacy/: README.md  bot.py  debug_page.html  quality_scorer.py  reply_generator.py  semantic_filter.py  thread_monitor.py
src/: __init__.py
tests/: test_account_health.py  test_api.py  test_browser_workflows.py  test_decision_engine.py  test_diary_builder.py  test_diary_memory.py  test_draft_writer.py  test_evaluator.py  test_feature_builder.py  test_health.py  test_ingest_worker.py  test_learning.py  test_llm.py  test_memory_integration.py  test_openai_provider.py  test_playwright_transport.py  test_policies.py  test_reddit_reader.py  test_repositories.py  test_review_service.py  test_review_worker.py  test_rewards.py  test_rules.py  test_settings.py
(+789 files in other folders)
